--- a/configs/lung_ct_full_body.yml
+++ b/configs/lung_ct_full_body.yml
@@ -1,8 +1,8 @@
 data:
-    dataset: "LSUN"
-    category: "classroom"
+    dataset: "lung_CT"
+    category: ""
     image_size: 256
-    channels: 3
+    channels: 1
     logit_transform: false
     uniform_dequantization: false
     gaussian_dequantization: false
@@ -10,10 +10,27 @@ data:
     rescaled: true
     num_workers: 10
 
+lung_ct_config:
+    data_dir: "/local_ssd1/xuk9/Projects/ChestExtrapolation/Data/v3"
+    dataset: "vlsp"
+    clip_range: [-1000, 600]
+    scale_range: [0, 1]
+    inter_order: 1
+    image_size: 256
+    channels: 1
+    augmentation:
+        padding_ratio: [1.05, 1.5]
+        rotation_degree: 15
+        trans_ratio_x: 0.1
+        trans_ratio_y: 0.2
+        gaussian_smooth_p: 0.3
+        gaussian_smooth_sigma: 1
+
+
 model:
     type: "simple"
-    in_channels: 3
-    out_ch: 3
+    in_channels: 1
+    out_ch: 1
     ch: 128
     ch_mult: [1, 1, 2, 2, 4, 4]
     num_res_blocks: 2
@@ -31,7 +48,7 @@ diffusion:
     num_diffusion_timesteps: 1000
 
 training:
-    batch_size: 6
+    batch_size: 24
     n_epochs: 10000
     n_iters: 5000000
     snapshot_freq: 5000
@@ -45,7 +62,7 @@ sampling:
 optim:
     weight_decay: 0.000
     optimizer: "Adam"
-    lr: 0.00002
+    lr: 0.000002
     beta1: 0.9
     amsgrad: false
     eps: 0.00000001
