Set the invalid region to value of zero and see if it can make a difference.

--- a/configs.cond/lung_CT.fov_extension.exp2.yml
+++ b/configs.cond/lung_CT.fov_extension.exp2.yml
@@ -47,7 +47,7 @@ model:
     ema_rate: 0.999
     ema: True
     resamp_with_conv: True
-    invalid_region_val: 'noise'
+    invalid_region_val: 'zero'
 
 diffusion:
     beta_schedule: linear
