Update the test and run / resume on multiple workstations.

--- a/configs.cond/lung_CT.fov_extension.exp6.yml
+++ b/configs.cond/lung_CT.fov_extension.exp6.yml
@@ -52,6 +52,7 @@ model:
     class_free_guidance: False
     class_free_guidance_dropout_rate: 0.1
     loss_type: 'l1'
+    restricted_loss_region: False
 
 diffusion:
     beta_schedule: linear
@@ -60,7 +61,7 @@ diffusion:
     num_diffusion_timesteps: 1000
 
 training:
-    batch_size: 14
+    batch_size: 24
     n_epochs: 10000
     n_iters: 5000000
     snapshot_freq: 5000
