--- a/configs.cond/lung_CT.fov_extension.exp4.yml
+++ b/configs.cond/lung_CT.fov_extension.exp4.yml
@@ -49,6 +49,10 @@ model:
     resamp_with_conv: True
     invalid_region_val: 'negative'
     in_mask_channel: False
+    class_free_guidance: False
+    class_free_guidance_dropout_rate: 0.1
+    loss_type: 'l2'
+    restricted_loss_region: False
 
 diffusion:
     beta_schedule: linear
@@ -57,7 +61,7 @@ diffusion:
     num_diffusion_timesteps: 1000
 
 training:
-    batch_size: 6
+    batch_size: 24
     n_epochs: 10000
     n_iters: 5000000
     snapshot_freq: 5000
